# pastas

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  BREAKING_CHANGES_V2.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  SUMMARY.md  a-pastas-model.md  adding-stress-models.md  basics-of-time-series-analysis.md  check_urls.py  contributing.md  making-figures.md  noise-model.md  parameter-estimation.md  pasta_make_dist.txt  pyproject.toml  pytest.ini  requirements.ci.txt  requirements.rtd.txt  requirements.travis.txt  setup.cfg  setup.py  test.pas  test_float_int.pas  time-steps-in-pastas.md  untitled.md  version.py
.devcontainer/: devcontainer.json  setup.sh
.github/: .gitattributes  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  bug_form.yml  bug_report.md  config.yml  development.md  enhancement.md  feature.md  task.md
.github/workflows/: auto-author-assign.yml  ci.yml  python-package.yml  python-publish.yml  test_benchmark_notebooks.yml  test_format_lint.yml  test_pandas3.yml  test_regression.yml  test_spelling.yml  test_unit_pytest.yml  test_urls.py  test_urls.yml  update-readme-deps.yml  update_readme_deps.py  url_check.yml
.spyproject/: workspace.ini
concepts/: armamodel.ipynb  autocorrelation.ipynb  handling_timeseries.ipynb  hantush_response.ipynb  noisemodel.ipynb  pastas_synthetic.ipynb  pastas_timeseries.ipynb  response_functions.ipynb
doc/: Makefile  about.rst  add_tseries.rst  api_docs.rst  concepts.rst  conf.py  content.rst  convert_nb.py  developers.rst  examples.rst  faqs.rst  getting-started.rst  getting_started.rst  gwtsa.imports.rst  gwtsa.recharge.rst  gwtsa.rst  index.rst  installation  installation.rst  introduction.rst  make.bat  map.rst  modules.rst  pasta.read.rst  pasta.recharge.rst  pasta.rst  pastas.read.rst  pastas.recharge.rst  pastas.rst  publications.bib  publications.rst  read me.rst  readme.rst  references.bib  references.rst  release_notes.rst
doc/-a/: pastas.read.rst  pastas.recharge.rst  pastas.rst
doc/API-docs/: convert_nb.rst  modules.rst  pastas.checks.rst  pastas.decorators.rst  pastas.io.base.rst  pastas.io.men.rst  pastas.io.pas.rst  pastas.io.rst  pastas.model.rst  pastas.modelstats.rst  pastas.noisemodels.rst  pastas.plots.rst  pastas.project.maps.rst  pastas.project.plots.rst  pastas.project.project.rst  pastas.project.rst  pastas.read.datamodel.rst  pastas.read.dinoloket.rst  pastas.read.knmi.rst  pastas.read.menyanthes.rst  pastas.read.rst  pastas.read.waterbase.rst  pastas.recharge.cythonize.rst  pastas.recharge.recharge.rst  pastas.recharge.recharge_func.rst  pastas.recharge.rst  pastas.rfunc.rst  pastas.rst  pastas.solver.rst  pastas.stats.core.rst  pastas.stats.dutch.rst  pastas.stats.rst  pastas.stats.tests.rst  pastas.stressmodels.rst  pastas.timeseries.rst  pastas.transform.rst  pastas.tseries.rst  pastas.uncertainty.rst  pastas.utils.rst  pastas.version.rst
doc/_static/: sphinxdoc.css
doc/_templates/: class.rst  layout.html  sidebar.html
doc/about/: 01_history.rst  02_team.rst  04_onsite_course.rst  citing.rst  courses.rst  faqs.rst  history.rst  index.rst  organisation.rst  publications.rst  references.rst  related.rst  team.rst  users.rst
doc/api/: index.rst  model.rst  noisemodels.rst  project.rst  read.rst  recharge.rst  rfuncs.rst  solvers.rst  statistics.rst  stressmodels.rst  timeseries.rst  transform.rst  visualization.rst
doc/auto_examples/: index.rst
doc/benchmarks/: aaMCMC vs Emcee.ipynb  aaMCMC vs Pastas.ipynb  armamodel.ipynb  autocorrelation.ipynb  check_response_functions.ipynb  cross_correlation_response_identification.ipynb  index.rst  noisemodel.ipynb  pastas_synthetic.ipynb  (+1 more)
doc/concepts/: armamodel.ipynb  (+25 more)
examples/: 1_simple_model.ipynb  example.py  example_900.py  example_WellModel.py  example_diff_evol.py  example_docs.py  example_logger.py  example_mc.py  example_menyanthes.py  example_menyanthes2.py  example_no_conv.py  example_old.py  example_project.py  example_pysot.py  example_recharge.py  example_rfunc.py  example_snow.py  example_spline.py  example_stats.py  example_step.py  example_tarso.py  example_timeit.py  example_timestep_weighted_resample.py  example_tmin.py  example_transform.py  example_uncertainty.py  example_well.py  pasta_model_gui.py  pysot_test.py  snow.py  test.men  test.py  test_diff_evol.py  test_dinodata.py  test_menyanthes.py  test_plot.py  test_project.pas  uncertainty.py
gui/: framework.py  pasta_gui.py  settings
gwtsa/: __init__.py  checks.py  model.py  rfunc.py  soil_module.c  soil_module.pyx  stats.py  tseries.py
gwtsa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pasta/: __init__.py  checks.py  model.py  rfunc.py  solver.py  stats.py  tseries.py
pastas/: __init__.py  _version.py  check.py  checks.py  dataset.py  decorators.py  forecast.py  immutables.py  log_config.json  model.py  modelcompare.py  modelplots.py  modelstats.py  noisemodels.py  objective_functions.py  objfunc.py  plot.py  plots.py  rcparams.py  recharge.py  reservoir.py  rfunc.py  settings.py  solver.py  stats.py  stressmodels.py  test_header.py  timer.py  timeseries.py  timeseries_utils.py  transform.py  tseries.py  typeh.py  uncertainty.py  utils.py  version.py
qtgui/: app.py
tests/: README_REGRESSION.md  conftest.py  fake_plugin.py  fixtures.py  readme.rst  regression.py  test_001.py  test_002.py  test_003.py  test_004.py  test_GXG.py  test_bokeh_plots.py  test_checks.py  test_comparison.py  test_dataset.py  test_deprecator.py  test_dutch.py  test_examples.py  test_extension.py  test_extensions.py  test_forecast.py  test_gxg.py  test_input_validation.py  test_jacobian.py  test_metrics.py  test_model.py  test_model_attribute_protection.py  test_modelstats.py  test_nb.py  test_noisemodels.py  test_notebooks.py  test_notebooks_bench.py  test_objective_functions.py  test_plotly_plots.py  test_plots.py  test_plugin.py  test_project.py  test_qgxg.py  test_reads.py  test_recharge.py  (+15 more)
(+759 files in other folders)
